samples/_failures_safe/1761096864_3925b4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3caff899.c: In function ‘main’:
./samples/SAFE/__tmp_3caff899.c:147:9: error: expected declaration or statement at end of input
  147 |         free_matrix(&a);
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_3caff899.c:147:9: error: expected declaration or statement at end of input
